# gpt-5.2-reasoning-ablation

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: study.example.json  study.high-token-budget.example.json
docs/: workflow.md
reports/: cost_latency_tradeoffs.csv  final_report.md  pairwise_stats.csv
src/gpt_5.2_reasoning_ablation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/gpt_5_2_reasoning_ablation/: analysis.py  case.py  cli.py  grading.py  io_utils.py  paths.py  prompts.py  reporting.py  runner.py  schemas.py  settings.py  text_utils.py
tests/: test_case.py  test_cli.py  test_reporting.py  test_runner.py  test_schemas.py  test_settings.py
